# k-nearest_neighbors

./: .gitignore  CMakeLists.txt  README.md  k-nearest_neighbors.code-workspace
digits/: Readme.md  digits.svm  predict.svm
src/: CMakeLists.txt  ClassificationReport.cpp  ClassificationReport.hpp  Data.cpp  Data.hpp  Features.cpp  Features.hpp  Knn.cpp  Knn.hpp  KnnCosine.cpp  KnnCosine.hpp  KnnEuclidian.cpp  KnnEuclidian.hpp  MyClass.cpp  MyClass.hpp  Sample.cpp  Sample.hpp  Similarity.hpp  StringUtils.cpp  StringUtils.hpp  main.cpp
test/: CMakeLists.txt  FeaturesTests.cpp  SampleTests.cpp  Test-test.cpp  test-feature.cpp
tst/: CMakeLists.txt
